--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "email-validator": "^2.0.4",
+    "firebase": "^9.12.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
