--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
     "firebase": "^9.12.1",
     "next": "12.3.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "sass": "^1.55.0"
   }
 }
