--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "prettier": "2.7.1",
     "sass": "^1.55.0"
   }
 }
