--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "timeago-react": "^3.0.5"
   },
   "devDependencies": {
     "eslint": "8.26.0",
